--- a/index.html
+++ b/index.html
@@ -1248,34 +1248,123 @@
                             <div className="space-y-6 animate-fade-in">
                                 <div className="grid grid-cols-1 lg:grid-cols-2 gap-6">
                                     <Card className="overflow-hidden border border-indigo-100 shadow-sm bg-white h-full flex flex-col">
-                                        <div className="p-5 border-b border-indigo-50 bg-indigo-50/30 flex justify-between items-center"><h3 className="font-bold text-indigo-900 flex items-center gap-2"><Icons.Star size={18} className="text-amber-400" /> Top 10 Sorter (Rincian Performa)</h3><span className="text-[10px] uppercase font-bold text-indigo-400 tracking-wider">Analisa Mendalam</span></div>
+                                        <div className="p-5 border-b border-indigo-50 bg-indigo-50/30 flex justify-between items-center">
+                                            <h3 className="font-bold text-indigo-900 flex items-center gap-2"><Icons.Star size={18} className="text-amber-400" /> Top 10 Sorter (Rincian Performa)</h3>
+                                            <span className="text-[10px] uppercase font-bold text-indigo-400 tracking-wider">Analisa Mendalam</span>
+                                        </div>
                                         <div className="overflow-x-auto flex-1">
                                             <table className="w-full text-xs text-left">
-                                                <thead className="text-slate-500 bg-slate-50 uppercase tracking-wider font-semibold border-b border-slate-100"><tr><th className="px-5 py-4 w-10 text-center">#</th><th className="px-5 py-4">Nama</th><th className="px-5 py-4 text-center"><div className="flex flex-col items-center"><span>Quality</span><span className="text-[9px] text-slate-400 font-normal">(Avg Score)</span></div></th><th className="px-5 py-4 text-center"><div className="flex flex-col items-center"><span>Volume</span><span className="text-[9px] text-slate-400 font-normal">(Avg Load/Hari)</span></div></th><th className="px-5 py-4 text-center"><div className="flex flex-col items-center"><span>Speed</span><span className="text-[9px] text-slate-400 font-normal">(Pcs/Jam)</span></div></th><th className="px-5 py-4">Keunggulan Utama</th></tr></thead>
+                                                <thead className="text-slate-500 bg-slate-50 uppercase tracking-wider font-semibold border-b border-slate-100">
+                                                    <tr>
+                                                        <th className="px-5 py-4 w-10 text-center">#</th>
+                                                        <th className="px-5 py-4">Nama</th>
+                                                        <th className="px-5 py-4 text-center">
+                                                            <div className="flex flex-col items-center">
+                                                                <span>Quality</span>
+                                                                <span className="text-[9px] text-slate-400 font-normal capitalize">(Total & Avg)</span>
+                                                            </div>
+                                                        </th>
+                                                        <th className="px-5 py-4 text-center">
+                                                            <div className="flex flex-col items-center">
+                                                                <span>Volume</span>
+                                                                <span className="text-[9px] text-slate-400 font-normal capitalize">(Total & Avg)</span>
+                                                            </div>
+                                                        </th>
+                                                        <th className="px-5 py-4 text-center">
+                                                            <div className="flex flex-col items-center">
+                                                                <span>Speed</span>
+                                                                <span className="text-[9px] text-slate-400 font-normal capitalize">(Pcs/Jam)</span>
+                                                            </div>
+                                                        </th>
+                                                        <th className="px-5 py-4">Keunggulan Utama</th>
+                                                    </tr>
+                                                </thead>
                                                 <tbody className="divide-y divide-slate-50">
                                                     {analysisStats.top10Sorters.map((p, idx) => (
                                                         <tr key={idx} className="hover:bg-indigo-50/30 transition-colors">
                                                             <td className="px-5 py-3 text-center font-bold text-slate-400 border-r border-slate-50 bg-slate-50/30">{idx + 1}</td>
-                                                            <td className="px-5 py-3 font-bold text-slate-800 border-r border-slate-50">{p.name}</td>
-                                                            <td className="px-5 py-3 text-center"><div className="flex items-center justify-center gap-1"><span className={`font-bold text-sm ${parseFloat(p.avgScore) >= 98 ? 'text-emerald-600' : 'text-slate-700'}`}>{p.avgScore}</span>{parseFloat(p.avgScore) >= 98 && <Icons.CheckCircle size={12} className="text-emerald-500" />}</div></td>
-                                                            <td className="px-5 py-3 text-center"><span className="font-medium text-slate-700">{p.avgLoad.toLocaleString()}</span></td>
-                                                            <td className="px-5 py-3 text-center"><div className="flex flex-col items-center"><span className="font-mono text-slate-600 bg-slate-100 px-2 py-0.5 rounded">{p.speed.toLocaleString()}</span>{p.peakLoad > 0 && <span className="text-[9px] text-slate-400 mt-1">Peak: {p.peakLoad.toLocaleString()}</span>}</div></td>
-                                                            <td className="px-5 py-3"><div className="flex flex-col gap-1"><span className={`inline-flex items-center px-2.5 py-1 rounded-md text-[10px] font-bold border shadow-sm ${p.badgeColor}`}>{p.reason}</span><span className="text-[9px] text-slate-400 font-medium">Spesialis: {p.specialty || 'General'}</span></div></td>
+                                                            <td className="px-5 py-3 font-bold text-slate-800 border-r border-slate-50">
+                                                                <div className="flex flex-col">
+                                                                    <span>{p.name}</span>
+                                                                    <span className="text-[9px] text-slate-400 font-normal">{p.hub}</span>
+                                                                </div>
+                                                            </td>
+                                                            
+                                                            {/* Quality Column: Stacked Total & Avg */}
+                                                            <td className="px-5 py-3 text-center">
+                                                                <div className="flex flex-col items-center gap-0.5">
+                                                                    <span className="text-xs font-bold text-slate-800" title="Total Scoring">{p.totalScore.toLocaleString()}</span>
+                                                                    <div className="flex items-center gap-1">
+                                                                         <span className={`text-[10px] ${parseFloat(p.avgScore) >= 98 ? 'text-emerald-600 font-bold' : 'text-slate-500'}`}>{p.avgScore}</span>
+                                                                         {parseFloat(p.avgScore) >= 98 && <Icons.CheckCircle size={10} className="text-emerald-500" />}
+                                                                    </div>
+                                                                </div>
+                                                            </td>
+
+                                                            {/* Volume Column: Stacked Total & Avg */}
+                                                            <td className="px-5 py-3 text-center">
+                                                                <div className="flex flex-col items-center gap-0.5">
+                                                                    <span className="text-xs font-bold text-slate-800" title="Total Load">{p.totalLoad.toLocaleString()}</span>
+                                                                    <span className="text-[10px] text-slate-500" title="Rata-rata Load Harian">{p.avgLoad.toLocaleString()}</span>
+                                                                </div>
+                                                            </td>
+
+                                                            <td className="px-5 py-3 text-center">
+                                                                <div className="flex flex-col items-center">
+                                                                    <span className="font-mono text-slate-600 bg-slate-100 px-2 py-0.5 rounded">{p.speed.toLocaleString()}</span>
+                                                                    {p.peakLoad > 0 && <span className="text-[9px] text-slate-400 mt-1">Peak: {p.peakLoad.toLocaleString()}</span>}
+                                                                </div>
+                                                            </td>
+                                                            <td className="px-5 py-3">
+                                                                <div className="flex flex-col gap-1">
+                                                                    <span className={`inline-flex items-center px-2.5 py-1 rounded-md text-[10px] font-bold border shadow-sm ${p.badgeColor}`}>{p.reason}</span>
+                                                                    <span className="text-[9px] text-slate-400 font-medium">Spesialis: {p.specialty || 'General'}</span>
+                                                                </div>
+                                                            </td>
                                                         </tr>
                                                     ))}
                                                 </tbody>
                                             </table>
                                         </div>
+                                        {/* Note Section */}
+                                        <div className="p-3 bg-slate-50 border-t border-slate-100 text-[10px] text-slate-500 flex flex-wrap gap-4 items-center justify-center">
+                                            <div className="flex items-center gap-1.5">
+                                                <div className="flex flex-col leading-none text-center bg-white border border-slate-200 px-1.5 py-0.5 rounded">
+                                                    <span className="font-bold text-slate-800">1.200</span>
+                                                    <span className="text-slate-400">95</span>
+                                                </div>
+                                                <span>= <b>Quality:</b> Total Scoring (Atas) / Avg Score (Bawah)</span>
+                                            </div>
+                                            <div className="w-px h-4 bg-slate-300"></div>
+                                            <div className="flex items-center gap-1.5">
+                                                <div className="flex flex-col leading-none text-center bg-white border border-slate-200 px-1.5 py-0.5 rounded">
+                                                    <span className="font-bold text-slate-800">5.000</span>
+                                                    <span className="text-slate-400">1.000</span>
+                                                </div>
+                                                <span>= <b>Volume:</b> Total Load (Atas) / Avg Load Harian (Bawah)</span>
+                                            </div>
+                                        </div>
                                     </Card>
+
                                     <Card className="overflow-hidden border border-rose-100 shadow-sm bg-white h-full flex flex-col">
-                                        <div className="p-5 border-b border-rose-50 bg-rose-50/30 flex justify-between items-center"><h3 className="font-bold text-rose-900 flex items-center gap-2"><Icons.Activity size={18} className="text-rose-500" /> Attention Needed</h3><span className="text-[10px] uppercase font-bold text-rose-400 tracking-wider">Perlu Coaching</span></div>
+                                        <div className="p-5 border-b border-rose-50 bg-rose-50/30 flex justify-between items-center">
+                                            <h3 className="font-bold text-rose-900 flex items-center gap-2"><Icons.Activity size={18} className="text-rose-500" /> Attention Needed</h3>
+                                            <span className="text-[10px] uppercase font-bold text-rose-400 tracking-wider">Perlu Coaching</span>
+                                        </div>
                                         <div className="overflow-x-auto flex-1">
                                             <table className="w-full text-xs text-left">
-                                                <thead className="text-slate-400 bg-slate-50 uppercase tracking-wider font-semibold"><tr><th className="px-5 py-3">Nama</th><th className="px-5 py-3 text-right">Avg Score</th><th className="px-5 py-3 text-right">Avg Load</th><th className="px-5 py-3">Status</th></tr></thead>
+                                                <thead className="text-slate-400 bg-slate-50 uppercase tracking-wider font-semibold">
+                                                    <tr><th className="px-5 py-3">Nama</th><th className="px-5 py-3 text-right">Avg Score</th><th className="px-5 py-3 text-right">Avg Load</th><th className="px-5 py-3">Status</th></tr>
+                                                </thead>
                                                 <tbody className="divide-y divide-slate-50">
                                                     {analysisStats.bottomPerformers.map((p, idx) => (
                                                         <tr key={idx} className="hover:bg-rose-50/30 transition-colors">
-                                                            <td className="px-5 py-3 font-medium text-slate-700">{p.name}</td>
+                                                            <td className="px-5 py-3 font-medium text-slate-700">
+                                                                <div className="flex flex-col">
+                                                                    <span>{p.name}</span>
+                                                                    <span className="text-[9px] text-slate-400 font-normal">{p.hub}</span>
+                                                                </div>
+                                                            </td>
                                                             <td className="px-5 py-3 text-right font-bold text-rose-600">{p.avgScore}</td>
                                                             <td className="px-5 py-3 text-right text-slate-500">{p.avgLoad}</td>
                                                             <td className="px-5 py-3"><span className="text-[10px] font-bold text-rose-500 bg-rose-50 px-2 py-1 rounded">Evaluasi</span></td>
