--- a/index.html
+++ b/index.html
@@ -1326,22 +1326,43 @@
                                                 </tbody>
                                             </table>
                                         </div>
-                                        {/* Note Section */}
-                                        <div className="p-3 bg-slate-50 border-t border-slate-100 text-[10px] text-slate-500 flex flex-wrap gap-4 items-center justify-center">
-                                            <div className="flex items-center gap-1.5">
-                                                <div className="flex flex-col leading-none text-center bg-white border border-slate-200 px-1.5 py-0.5 rounded">
-                                                    <span className="font-bold text-slate-800">1.200</span>
-                                                    <span className="text-slate-400">95</span>
+                                        
+                                        {/* EXPANDED NOTE SECTION */}
+                                        <div className="p-4 bg-slate-50 border-t border-slate-200 text-[11px] text-slate-600">
+                                            <h4 className="font-bold text-slate-800 mb-2 flex items-center gap-2"><Icons.Brain size={14} className="text-indigo-500"/> Panduan Membaca Data:</h4>
+                                            <div className="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-2">
+                                                <div className="space-y-2">
+                                                    <div className="flex items-start gap-2">
+                                                        <div className="min-w-[40px] flex flex-col leading-none text-center bg-white border border-slate-300 px-1 py-0.5 rounded shadow-sm">
+                                                            <span className="font-bold text-slate-800 text-[10px]">1200</span>
+                                                            <span className="text-slate-400 text-[9px]">95</span>
+                                                        </div>
+                                                        <div>
+                                                            <span className="font-bold text-indigo-700">Quality (Total & Avg):</span>
+                                                            <p className="text-slate-500 leading-tight">Angka <b>Atas</b> adalah Akumulasi Total Skor selama periode. Angka <b>Bawah</b> adalah Rata-rata Skor per Hari.</p>
+                                                        </div>
+                                                    </div>
+                                                    <div className="flex items-start gap-2">
+                                                        <div className="min-w-[40px] flex flex-col leading-none text-center bg-white border border-slate-300 px-1 py-0.5 rounded shadow-sm">
+                                                            <span className="font-bold text-slate-800 text-[10px]">5000</span>
+                                                            <span className="text-slate-400 text-[9px]">1000</span>
+                                                        </div>
+                                                        <div>
+                                                            <span className="font-bold text-indigo-700">Volume (Total & Avg):</span>
+                                                            <p className="text-slate-500 leading-tight">Angka <b>Atas</b> adalah Total Paket yang diproses. Angka <b>Bawah</b> adalah Rata-rata Beban Kerja Harian.</p>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <span>= <b>Quality:</b> Total Scoring (Atas) / Avg Score (Bawah)</span>
-                                            </div>
-                                            <div className="w-px h-4 bg-slate-300"></div>
-                                            <div className="flex items-center gap-1.5">
-                                                <div className="flex flex-col leading-none text-center bg-white border border-slate-200 px-1.5 py-0.5 rounded">
-                                                    <span className="font-bold text-slate-800">5.000</span>
-                                                    <span className="text-slate-400">1.000</span>
+                                                <div className="space-y-2 border-l border-slate-200 pl-4 md:border-l-0 md:pl-0">
+                                                    <div>
+                                                        <span className="font-bold text-indigo-700">⚡ Speed (Pcs/Jam):</span>
+                                                        <p className="text-slate-500 leading-tight">Kecepatan rata-rata murni: <code>Total Semua Paket ÷ Total Jam Kerja</code>.</p>
+                                                    </div>
+                                                    <div>
+                                                        <span className="font-bold text-indigo-700">🏅 Keunggulan Utama:</span>
+                                                        <p className="text-slate-500 leading-tight">Analisa otomatis sistem yang membandingkan performa sorter terhadap rata-rata tim & rekor load di jam sibuk (Peak Hour).</p>
+                                                    </div>
                                                 </div>
-                                                <span>= <b>Volume:</b> Total Load (Atas) / Avg Load Harian (Bawah)</span>
                                             </div>
                                         </div>
                                     </Card>
