--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Produktivitas 2025</title>
+    <title>Dashboard Produktivitas 2025 (Live Data: logsheet-5r)</title>
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -1118,6 +1118,24 @@
                                                     ))}
                                                     {hubSummaryCurrentTab.length === 0 && <div className="text-slate-400 italic text-sm p-2">Tidak ada data HUB</div>}
                                                 </div>
+                                            </div>
+                                            
+                                            {/* ADDED: HUB Summary Legend */}
+                                            <div className="p-3 bg-slate-50 border-t border-slate-200 text-[11px] text-slate-500 flex flex-wrap gap-6 justify-center">
+                                                 <div className="flex items-center gap-1.5">
+                                                    <span className="font-bold text-slate-700">Total Load:</span>
+                                                    <span>Total volume paket yang diproses.</span>
+                                                 </div>
+                                                 <div className="w-px h-3 bg-slate-300 hidden sm:block"></div>
+                                                 <div className="flex items-center gap-1.5">
+                                                    <span className="font-bold text-indigo-600">Avg Prd:</span>
+                                                    <span>Rata-rata kecepatan kerja tim (Pcs/Jam).</span>
+                                                 </div>
+                                                 <div className="w-px h-3 bg-slate-300 hidden sm:block"></div>
+                                                 <div className="flex items-center gap-1.5">
+                                                    <span className="px-1.5 py-0.5 rounded-full bg-green-100 text-green-700 text-[9px] font-bold">95</span>
+                                                    <span>= Rata-rata Skor Kualitas (Quality) Tim.</span>
+                                                 </div>
                                             </div>
                                         </Card>
                                     </div>
